<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    tools:context=".Donation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:maxWidth="20dp"
            android:maxHeight="20dp"
            android:src="@drawable/cutedogcat" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsbold"
            android:padding="10dp"
            android:text="@string/donate_title"
            android:textAlignment="center"
            android:textColor="@color/darkbrown"
            android:textSize="18dp" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppinsregular"
            android:padding="10dp"
            android:text="@string/donate_msg"
            android:textAlignment="center"
            android:textColor="@color/darkbrown"
            android:textSize="16dp" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/donate_msg1"
            android:textAlignment="center"
            android:textColor="@color/darkbrown"
            android:textSize="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDonate"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/darkbrown"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/donate_button"
            android:textColor="@color/cream"
            android:textSize="16sp" />

    </LinearLayout>


</FrameLayout>