<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical"
    android:scaleType="centerCrop"
    tools:context=".Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="15sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"></View>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="113dp"
                android:maxWidth="20dp"
                android:maxHeight="20dp"
                android:src="@drawable/patilogo" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/pati"
                android:textAlignment="center"
                android:textColor="@color/cream"
                android:textSize="30dp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            app:cardBackgroundColor="#99F2F2F2"
            app:cardCornerRadius="25dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="15dp"
                        android:fontFamily="@font/poppinsregular"
                        android:text="@string/enterInfo"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/text_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:background="@drawable/custom_button"
                        android:backgroundTint="#80F2F2F2"
                        android:fontFamily="@font/poppinsregular"
                        android:hint="@string/hint_login"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:padding="5dp"
                        android:textSize="18sp"
                        android:textColor="@color/darkbrown"
                        />


                    <EditText
                        android:id="@+id/text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:background="@drawable/custom_button"
                        android:backgroundTint="#80F2F2F2"
                        android:fontFamily="@font/poppinsregular"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        android:padding="5dp"
                        android:textSize="18sp"
                        android:textColor="@color/darkbrown"
                        />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <CheckBox
                        android:id="@+id/remember_me_cb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="10sp"
                        android:fontFamily="@font/poppinsregular"
                        android:text="@string/remember_me"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:buttonTint="@color/darkbrown"
                        />
                </RelativeLayout>

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppinsregular"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonLogin"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/custom_button"
                    android:backgroundTint="@color/darkbrown"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/button_login"
                    android:textColor="@color/cream"
                    android:textSize="16sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"></View>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>