<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:paddingVertical="30dp"
    tools:context=".SickAnimal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sick_welcome_tw"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="0dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="#70593C23"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/upload_sick_animal"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="100dp">

            <ImageView
                android:id="@+id/sickImageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholderphoto" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_sick_post_animal"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:background="@drawable/plus" />

        </RelativeLayout>


        <EditText
            android:id="@+id/sick_exp_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/explanation"
            android:textColor="@color/darkbrown"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/sick_address_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/address"
            android:textColor="@color/darkbrown"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/post_sick_animal"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/darkbrown"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/post_now"
            android:textColor="@color/cream"
            android:textSize="16sp" />

    </LinearLayout>

</FrameLayout>