<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/darkbrown"
        app:cardCornerRadius="25dp"
        app:cardUseCompatPadding="true"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/dogandcat"
                app:shapeAppearanceOverlay="@style/roundimageview" />


            <TextView
                android:id="@+id/lostTextViewAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/address"
                android:textColor="@color/cream"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lostTextViewTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/tel"
                android:textColor="@color/cream"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lostTextViewExp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/explanation"
                android:textColor="@color/cream"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>